--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "projectucesak",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
