--- a/server/package.json
+++ b/server/package.json
@@ -2,16 +2,17 @@
   "name": "project-ucesak",
   "version": "1.0.0",
   "description": "Hairstyle recommendation system",
-  "main": "server/server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server/server.js",
-    "dev": "nodemon server/server.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "David Pešek",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^8.12.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.1.10"
