--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,22 @@
 {
   "name": "project-ucesak",
   "version": "1.0.0",
-  "description": "Hairstyle recommendation system",
+  "description": "Hairstyle Recommendation System",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "David Pešek",
   "license": "ISC",
   "dependencies": {
-    "ajv": "^8.12.0",
+    "ajv": "^8.17.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^3.1.10"
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
